# the-rust-book-chapters-15-and-16

./: Cargo.toml  README.md
.githooks/: pre-commit
lib/linked-lists/: Cargo.toml
lib/linked-lists/src/: first.rs  lib.rs  second.rs
src/: lib.rs  main.rs
